--- a/config/defaults/behaviors.dtsi
+++ b/config/defaults/behaviors.dtsi
@@ -28,7 +28,8 @@
 
 ZMK_BEHAVIOR(hm, hold_tap,
     tapping-term-ms = <150>;
-    quick-tap-ms = <0>; flavor = "tap-preferred";
+    quick-tap-ms = <0>;
+    flavor = "tap-preferred";
     bindings =
         <&kp>,
         <&kp>;
