--- a/.github/workflows/draw.yml
+++ b/.github/workflows/draw.yml
@@ -20,7 +20,7 @@ concurrency:
 
 jobs:
   draw:
-    uses: minusfive/keymap-drawer/.github/workflows/draw-zmk.yml@main
+    uses: caksoylar/keymap-drawer/.github/workflows/draw-zmk.yml@main
     permissions:
       contents: write
     with:
@@ -28,4 +28,5 @@ jobs:
       keymap_patterns: "config/*.keymap" # path to the keymaps to parse
       config_path: "keymap_drawer.config.yaml" # config file, ignored if not exists
       output_folder: "img" # path to save produced SVGs
-      amend_commit: true # whether to amend the commit or create a new one
+      parse_args: ""  # map of extra args to pass to `keymap parse`, e.g. "corne:'-l Def Lwr Rse' cradio:''"
+      draw_args: "34keys_handwired: -k ferris/sweep"   # map of extra args to pass to `keymap draw`, e.g. "corne:'-k corne_rotated' cradio:'-k paroxysm'"
